--- a/style.css
+++ b/style.css
@@ -44,7 +44,13 @@ section h2 {
 ul {
     list-style-type: none;
 }
-
+imagem1{
+ width: ;
+ height: ;
+ display: flex;
+ position: relative;
+ margin: auto;
+}
 footer {
     background-color: #333333;
     color: #fff;
